# mongodb-confluent-streaming-agents-qs

./: .env.example  .gitignore  LICENSE  README.md  WALKTHROUGH.md  pyproject.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  TROUBLESHOOTING.md
mcp-server/: .env.example  Dockerfile  package.json  proxy.mjs  start.sh
mcp-server/test/: proxy.test.mjs  smoke.test.mjs
scripts/: asp_setup.py  build_river_waypoints.py  dashboard.py  datagen.py  deploy.py  destroy.py  generate_batch_data.py  generate_batches.py  health.py  live_server.py  mcp_deploy.py  nudge.py  pipeline_reset.py  preflight.py  publish_data.py  surge.py  validate_map.py
scripts/common/: asp_restart.py  asp_topology.py  atlas_reconcile.py  cli_logging.py  cli_output.py  credentials.py  datagen_helpers.py  env_file.py  flink_pipeline.py  flink_rest.py  flink_statements.py  generate_deployment_summary.py  geo.py  http_auth.py  logging_utils.py  login_checks.py  mongo.py  mongo_uri.py  pipeline_logger.py  pipeline_topics.py  redaction.py  terraform.py  terraform_outputs.py  terraform_runner.py  test_bedrock_credentials.py  tfvars.py
scripts/data/: vessel_catalog.json
terraform/agents/: main.tf  outputs.tf  providers.tf  variables.tf
terraform/agents/data-gen/: root.json  run.bat  run.sh
terraform/agents/data-gen/functions/: advance_time.py
terraform/agents/data-gen/generators/: base-rides.json  steady-state-rides.json  surge-rides.json
terraform/agents/data-gen/zones/: all-zones.json  steady-zones.json  surge-zones.json
terraform/agents/sql/: anomalies-enriched-ctas.sql  anomalies-enriched-insert.sql  anomalies-sink-insert.sql  anomaly-detection-insert.sql  completed-actions-ctas.sql  dispatch-insert.sql  zone-traffic-sink-insert.sql
terraform/atlas/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/core/: main.tf  outputs.tf  variables.tf  versions.tf
testing/e2e/: test_asp_restart.py  test_asp_setup.py  test_cli_output.py  test_code_review_fixes.py  test_dashboard.py  test_deploy_exit.py  test_deploy_live.py  test_deploy_noninteractive.py  test_deploy_resume.py  test_deploy_resume_prompt.py  test_deploy_summary.py  test_flink_rest.py  test_fresh_deploy_hardening.py  test_holistic_review_pass2.py  test_http_auth.py  test_integration.py  test_live_overlay.py  test_live_server.py  test_live_server_proc.py  test_map_fallback.py  test_mission_control.py  test_mongo_common.py  test_mongo_uri.py  test_pass3_fixes.py  test_pipeline_logger.py  test_pipeline_reset_result.py  test_pipeline_topics.py  test_preflight.py  test_preflight_checks.py  test_preflight_integ.py  test_publish_delivery.py  test_quick_wins.py  test_surge_director.py  test_terraform.py
web/: app.js  icons.js  index.html  map.js
